fixed home button on mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,11 @@
   color: white;
   font-weight: bold;
   border: none;
-  padding: 0.5rem 1.5rem;
+  padding: 0.75rem 2rem; 
   border-radius: 12px;
   transition: all 0.3s ease;
   font-family: "Brush Script MT", "Brush Script Std", cursive;
+  font-size: 1.5rem; 
 }
 
 .custom-btn {
@@ -20,10 +21,6 @@
   box-shadow: 0 0 12px hotpink;
 }
 
-.modal-footer .btn-hotpink {
-  font-size: 3rem; 
-  padding: 0.75rem 2rem; 
-}
 .card-body {
   color: white;
   font-weight: bold;
